# abit-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: env.rs  main.rs
common/: Cargo.toml
common/src/: env.rs  lib.rs  logging.rs
dbml/: core_schema.dbml
edbo_core/: Cargo.toml
edbo_core/migrations/: 001_setup.sql
edbo_core/src/: api.rs  context.rs  crypto.rs  database.rs  env.rs  error.rs  lib.rs  model.rs  repository.rs  request.rs  services.rs
edbo_core/src/api/: applications.rs  institution.rs  offers.rs  offers_university.rs
edbo_core/src/dto/: application.rs  institution.rs  offers_university.rs  universities.rs
edbo_core/src/model/: applicant.rs  application.rs  course.rs  degree.rs  institution.rs  institution_category.rs  offer.rs  offer_type.rs  offers_university.rs  ownership_form.rs  priority.rs  region.rs  speciality.rs  status.rs  study_form.rs  university.rs
edbo_core/src/repository/: applicant.rs  application.rs  degree.rs  institution.rs  institution_category.rs  knowledge_field.rs  offer.rs  offer_type.rs  offers_university.rs  ownership_form.rs  priority.rs  region.rs  speciality.rs  status.rs  study_form.rs
edbo_core/src/request/: institution.rs  universities.rs
edbo_core/src/services/: applications.rs  enum_service.rs  institutions.rs  offer.rs  offer_university.rs
