[package]
name = "cli"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.89"

categories = ["simulation"]
keywords = ["applicants", "education"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/abit-rs"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
edbo_core = { path = "../edbo_core" }

dotenvy = "0.15.7"
log = "0.4.27"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }