[package]
name = "common"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.89"

categories = ["simulation"]
keywords = ["applicants", "education"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/abit-rs"

[lints]
workspace = true

[dependencies]
chrono = "0.4.41"
fern = "0.7.1"
log = "0.4.27"
thiserror = "2.0.16"
