[package]
name = "edbo_core"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.89"

categories = ["simulation"]
keywords = ["applicants", "education"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/abit-rs"

[lints]
workspace = true

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
block-padding = "0.3"
cbc = "0.1.2"
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [ "derive", "macros", "postgres", "runtime-tokio", "json" ] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.6"
